<resources>
    <string name="app_name">Instagram Project</string>

    <string name="network_connection_error">Internet connection lost, please retry again</string>
    <string name="network_default_error">Something wrong happened, please retry again</string>
    <string name="network_internal_error">Our systems got an error, please retry again</string>
    <string name="network_server_not_available">Our services are under maintenance, please retry after some time
    </string>
    <string name="server_connection_error">Not able to connect, please retry again</string>
    <string name="network_login_again">Please log in again</string>

    <!--login-->
    <string name="email_field_hint">Enter your email</string>
    <string name="password_field_hint">Enter your password</string>
    <string name="email_field_empty">Email can\'t be empty</string>
    <string name="user_full_name_field_hint">Enter your full name</string>
    <string name="password_field_empty">Password can\'t be empty</string>
    <string name="email_field_invalid">Not a valid email</string>
    <string name="password_field_small_length">Password less than 6 digits</string>
    <string name="login_button_text">Login</string>
    <string name="sign_button_text">SIGN UP</string>
    <string name="user_name_field_hint">Enter your full name</string>
    <string name="user_name_field_hint_empty">User name cannot  be empty</string>


    <string name="menu_home">home</string>
    <string name="menu_profile">profile</string>
    <string name="menu_photo">photo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="post_like_label">%1d Likes</string>
    <string name="no_of_posts">%1d Posts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout_button_text">Logout</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="edit_user_name">Erwin Smith</string>
    <string name="edit_user_desc">I am a passionate Android developer and I aim to reach high and touch the sky</string>
    <string name="change_photo">Change Photo</string>
    <string name="name">Name</string>
    <string name="Bio">Bio</string>
    <string name="private_information">Private Information</string>
    <string name="email_address_text">Email Address</string>
    <string name="progress_message">Saving Profile Please Wait...</string>
    <string name="progress_upload_message">Uploading image Please Wait...</string>
    <string name="user_info_updated">User info updated successfuly</string>
    <string name = "upload_success">Upload Success</string>
    <string name="upload_failure">Upload Failure</string>
    <string name="add_image">Add Image</string>
    <string name="storage_permission_denied_message">you have denied the permission please allow the persmission to take camera and gallery pictures</string>
</resources>
