<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_home"
        android:title="@string/menu_home"
        android:titleCondensed="@string/menu_home"
        app:showAsAction="always"
        android:icon="@drawable/selector_home" />
    <item android:id="@+id/action_photo"
        android:title="@string/menu_photo"
        android:titleCondensed="@string/menu_photo"
        app:showAsAction="always"
        android:icon="@drawable/selector_photos" />
    <item android:id="@+id/action_profile"
        android:title="@string/menu_profile"
        android:titleCondensed="@string/menu_profile"
        app:showAsAction="always"
        android:icon="@drawable/selector_profile" />
</menu>